# aichallenge-racingkart-aaa-2026

./: Makefile  requirements.txt  setup.bash
aichallenge/: run_simulator.bash
aichallenge/ml_workspace/reinforcement_learning/: README.md
aichallenge/ml_workspace/reinforcement_learning/src/: main.py  select_parts.py
aichallenge/ml_workspace/reinforcement_learning/src/action/: default_action_adapter.py  interfaces.py
aichallenge/ml_workspace/reinforcement_learning/src/config/: load_config.py
aichallenge/ml_workspace/reinforcement_learning/src/config/config_store/: default_config.yaml
aichallenge/ml_workspace/reinforcement_learning/src/context/: context_manager.py  context_types.py
aichallenge/ml_workspace/reinforcement_learning/src/environment/: awsim_env.py
aichallenge/ml_workspace/reinforcement_learning/src/node/: awsim_env_node.py  bridge_topic.py
aichallenge/ml_workspace/reinforcement_learning/src/observation/: default_observation.py  interfaces.py
aichallenge/ml_workspace/reinforcement_learning/src/reward/: default_reward.py  interfaces.py
aichallenge/ml_workspace/reinforcement_learning/src/termination/: default_termination.py  interfaces.py  none_termination.py
aichallenge/ml_workspace/reinforcement_learning/workspace/202605122237/: default_condig.yaml
aichallenge/workspace/src/aichallenge_submit/rl_train/: CMakeLists.txt  README.md  package.xml
aichallenge/workspace/src/aichallenge_submit/rl_train/launch/: rl_train.launch.xml
aichallenge/workspace/src/aichallenge_submit/rl_train/rl_train_controller/: rl_train_controller_node.py
(+4 files in other folders)
